# skills

./: .claudeignore  .env.example  .gitignore  .pre-commit-config.yaml  Agents.md  CLAUDE.md  Makefile  Prompt.md  Prompt_history.md  README.md  SKILL.md  commands.md
.claude/: settings.local.json
.claude/agents/: antifraud-agent.md  api-gateway-agent.md  audit-agent.md  cache-agent.md  capture-agent.md  database-agent.md  (+12 more)
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/api/: config.py  dependencies.py  main.py
backend/api/routers/: health.py  verification.py
backend/core/: exceptions.py  orchestrator.py  schemas.py  session.py
backend/infrastructure/: celery_app.py  circuit_breaker.py  database.py  encryption.py  logging.py  metrics.py  middleware.py  ml_tasks.py  models.py  rbac.py  redis.py  storage.py  tasks.py  tracing.py  triton_client.py  vault.py  watchdog.py
backend/modules/: ml_base.py
backend/modules/antifraud/: age_consistency.py  blacklist.py  geo_check.py  models.py  multi_attempt.py  service.py
backend/modules/audit/: anonymizer.py  hasher.py  models.py  service.py
backend/modules/capture/: gallery_blocker.py  models.py  quality.py  service.py  virtual_camera.py
backend/modules/decision/: explainer.py  models.py  rules.py  service.py
backend/modules/doc_processing/: detector.py  enhancer.py  face_extractor.py  forgery.py  models.py  perspective.py  service.py
backend/modules/face_match/: aligner.py  detector.py  embeddings.py  models.py  quality.py  service.py
backend/modules/liveness/: models.py  service.py
backend/modules/liveness/detectors/: anti_spoof.py  challenges.py  deepfake.py  depth.py  optical_flow.py  texture.py
backend/modules/ocr/: consistency.py  engine.py  expiry.py  models.py  mrz_parser.py  normalizer.py  service.py
backend/modules/orchestrator/: models.py  progress.py  service.py
backend/tests/: conftest.py
backend/tests/unit/: test_antifraud.py  test_audit.py  test_capture.py  test_decision.py  test_doc_processing.py  test_face_match.py  test_health.py  test_liveness.py  test_ml_tasks.py  test_ocr.py  test_orchestrator.py  test_rate_limiter.py  test_schemas.py
docs/: deployment.md
models/: checksums.json
scripts/: download-models.sh  setup-dev.sh
(+694 files in other folders)
